@@ -1,3 +1,6 @@
 
 2009-08-01
 Initial project in ajcodekatas
+Database, w/initial tests
+Schema, w/initial tests
+Table, w/initial tests
